# cohort-bot

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml
.claude/agents/: product-marketing.md  ux-designer.md
.claude/skills/plan/: SKILL.md
.github/workflows/: ci.yml  claude.yml  deploy.yml  dispatch-ac13.yml
app/: __init__.py  config.py  logging.py  main.py
app/admin/: __init__.py  api.py
app/admin/static/: index.html
app/digest/: __init__.py  formatter.py  pipeline.py
app/discord/: __init__.py  commands.py  handlers.py  interactions.py  responses.py  rest.py  verify.py
app/github/: __init__.py  client.py
app/store/: __init__.py  firestore.py  repositories.py
app/substack/: __init__.py  client.py
app/summarizer/: __init__.py  claude.py
app/tasks/: __init__.py  auth.py  queue.py
deploy/: Dockerfile  cloudbuild.yaml  setup.sh
docs/: ARCHITECTURE.md  BUILD_PLAN.md  NEXT-STEPS.md  PRD.md  implementation-notes.md  implementation.md  spec.md  test-environment.md
docs/plans/: 2026-07-02-001-feat-github-digest-discord-bot-plan.md
scripts/: register_commands.py
tests/: conftest.py  test_admin_api.py  test_app.py  test_commands.py  test_digest_pipeline.py  test_github_client.py  test_handlers.py  test_logging.py  test_repositories.py  test_substack_client.py  test_summarizer.py  test_tasks.py  test_verify.py
