[project]
name = "cohort-bot"
version = "0.1.0"
description = "GitHub Activity Digest Discord bot on Cloud Run"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pynacl>=1.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "google-cloud-firestore>=2.16",
    "google-cloud-tasks>=2.16",
    "google-auth>=2.30",
    "anthropic>=0.34",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
